Use getConstructor().newInstance() instead of just newInstance()
Calling newInstance() on a class alone is dangerous and deprecated. Using getConstructor().newInstance() instead is preferable.